fixed 401 for updateUser and implemented deleteUser