@@ -32,7 +32,7 @@ public class UserService {
 
     public void saveNewUser(User user){
         user.setPassword(passwordEncoder.encode(user.getPassword()));
-        user.setRoles(Arrays.asList("ROLE_USER"));
+        user.setRoles(List.of("ROLE_USER"));
         userRepository.save(user);
     }
 
